<resources>
    <string name="app_name">MyFirsrtPro</string>
    <string name="radioFemale">Female</string>
    <string name="radioMale">Male</string>
    <string name="title_activity_time_picker">TimePicker</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="back"><![CDATA[<--]]></string>
    <string name="forward"><![CDATA[-->]]></string>
    <string name="title_activity_nav_menu1">nav_menu1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_reminder">Reminder</string>
    <string name="menu_about">About</string>
    <string name="menu_test">Test</string>
    <string name="menu_monthlyCal">Monthly Calendar</string>
    <string name="menu_weeklyCal">Weekly Calendar</string>
    <string name="menu_dailyCal">Daily Calendar</string>
    <string name="done">Done</string>


</resources>