
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="start"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingLeft="30dp"
    android:paddingTop="16dp"
    android:paddingRight="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp"
        app:srcCompat="@drawable/profilepic" />

    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/userEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/nav_header_subtitle" />




</LinearLayout>