<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_monthlyCal">

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.myfirsrtpro.ui.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myfirsrtpro.ui.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/about_menu"
        android:name="com.example.myfirsrtpro.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_monthlyCal"
        android:name="com.example.myfirsrtpro.ui.MonthlyFragment"
        android:label="Monthly Calendar"
        tools:layout="@layout/fragment_monthly" />

    <fragment
        android:id="@+id/nav_weeklyCal"
        android:name="com.example.myfirsrtpro.ui.WeeklyFragment"
        android:label="Weekly Calendar"
        tools:layout="@layout/fragment_weekly" />

    <fragment
        android:id="@+id/nav_dailyCal"
        android:name="com.example.myfirsrtpro.ui.DailyFragment"
        android:label="Daily Calendar"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/nav_eventsList"
        android:name="com.example.myfirsrtpro.ui.EventsFragment"
        android:label="Events List"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_propic"
        android:name="com.example.myfirsrtpro.ui.EditProfileFragment"
        android:label="Edit Your Profile"
        tools:layout="@layout/fragment_editprofile"/>

</navigation>